# prace_control

./: README.md
frida_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
frida_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  raw3-3.srdf
frida_moveit_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  raw3-3_moveit_controller_manager.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
frida_moveit_plugins/: CMakeLists.txt  frida_plugins.xml  mainpage.dox  package.xml
frida_moveit_plugins/src/: ikfast_frida.cpp  ikfast_frida_gripper.cpp
prace_moveit_interface/: CMakeLists.txt  mainpage.dox  package.xml
prace_moveit_interface/action/: ExecPlan.action  JointSpace.action  Lin.action  Ptp.action  SyncMove.action
prace_moveit_interface/include/prace_moveit_interface/: MoveItInterface.h
prace_moveit_interface/launch/: interface.launch
prace_moveit_interface/src/: MoveItInterface.cpp  interfaceTester.py
